--- a/android/app/src/main/res/layout/events_widget.xml
+++ b/android/app/src/main/res/layout/events_widget.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/widget_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -13,21 +14,21 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="4dp"
-        android:contentDescription="Tasks" />
+        android:contentDescription="Events" />
 
     <ListView
-        android:id="@+id/tasks_list"
+        android:id="@+id/events_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@android:color/transparent"
         android:dividerHeight="4dp" />
 
     <TextView
-        android:id="@+id/empty_view"
+        android:id="@+id/empty_events_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="No urgent tasks"
+        android:text="No upcoming events"
         android:textColor="#AAAAAA"
         android:visibility="gone" />
 
